--- a/myaccount.html
+++ b/myaccount.html
@@ -81,12 +81,12 @@
                 <h4 style="font-size: 1.8rem; font-family: 'Montserrat', sans-serif;">My Wishlist</h4>
             </a>
 
-            <a href="saved-addresses.html" class="link-box" style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 2rem; border-radius: .5rem; border: 0.2rem solid var(--gray); background-color: #2a2a2a; color: var(--soft-white); text-align: center; transition: all 0.3s ease;">
+            <a href="index.html" class="link-box" style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 2rem; border-radius: .5rem; border: 0.2rem solid var(--gray); background-color: #2a2a2a; color: var(--soft-white); text-align: center; transition: all 0.3s ease;">
                 <i class="fas fa-map-marker-alt" style="font-size: 3rem; color: var(--silver); margin-bottom: 1rem;"></i>
                 <h4 style="font-size: 1.8rem; font-family: 'Montserrat', sans-serif;">Saved Addresses</h4>
             </a>
 
-            <a href="change-password.html" class="link-box" style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 2rem; border-radius: .5rem; border: 0.2rem solid var(--gray); background-color: #2a2a2a; color: var(--soft-white); text-align: center; transition: all 0.3s ease;">
+            <a href="index.html" class="link-box" style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 2rem; border-radius: .5rem; border: 0.2rem solid var(--gray); background-color: #2a2a2a; color: var(--soft-white); text-align: center; transition: all 0.3s ease;">
                 <i class="fas fa-lock" style="font-size: 3rem; color: var(--silver); margin-bottom: 1rem;"></i>
                 <h4 style="font-size: 1.8rem; font-family: 'Montserrat', sans-serif;">Change Password</h4>
             </a>
@@ -138,4 +138,5 @@
     <div class="credit"> created by OPTIQUE<span></span> | all rights reserved </div>
 </section>
 </body>
+
 </html>
