--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
         <div class="box">
             <h3>extra links</h3>
             <a href="myaccount.html"> <i class="fas fa-angle-right"></i> my account </a>
-            <a href="#"> <i class="fas fa-angle-right"></i> my order </a>
+            <a href="products.html"> <i class="fas fa-angle-right"></i> my order </a>
             <a href="wishlist.html"> <i class="fas fa-angle-right"></i> my wishlist </a>
             <a href="terms.html"> <i class="fas fa-angle-right"></i> terms of use </a>
-            <a href="#"> <i class="fas fa-angle-right"></i> privacy policy </a>
+            <a href="privacy.html"> <i class="fas fa-angle-right"></i> privacy policy </a>
         </div>
 
         <div class="box">
@@ -173,4 +173,5 @@
 </section>
 
 </body>
+
 </html>
